--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width,initial-scale=1.0" name="viewport"/>
-  <meta http-equiv="refresh" content="5">
+  <meta http-equiv="refresh" content="55">
 <title>IFWL F1 Leaderboard</title>
 <style>
     body {
@@ -177,10 +177,19 @@
   }
 }
 
+
+.driver-of-day {
+  text-align: center;
+  margin: 20px 0;
+  font-size: 1.2em;
+  font-weight: bold;
+  color: #000;
+}
+
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.61 (Added meta-refresh for live updates every 5s)</div>
+<div class="version">Version: Beta 0.0.62 (Added Driver of the Day above Free Slots)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
@@ -202,6 +211,12 @@
 
 </div>
 </div>
+
+<h2>Driver of the Day</h2>
+<div id="driver-of-day" class="driver-of-day">
+  <span id="driver-of-day-name">Loading...</span>
+</div>
+
 <h2>Team Slots Free</h2>
 <table id="free-slots-table">
   <thead><tr><th>TEAM</th><th>SLOTS FREE</th></tr></thead>
@@ -397,6 +412,18 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
       }
     });
 });
+
+  // --- Driver of the Day fetch ---
+  fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/export?format=csv&range=U16:U16`)
+    .then(r => r.text())
+    .then(text => {
+      const name = text.trim();
+      document.getElementById("driver-of-day-name").textContent = name || "N/A";
+    })
+    .catch(() => {
+      document.getElementById("driver-of-day-name").textContent = "Error";
+    });
+
 </script>
 </body>
 </html>
