--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -189,7 +189,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.62 (Added Driver of the Day above Free Slots)</div>
+<div class="version">Version: Beta 0.0.63 (Added Driver of the Day above Free Slots; Added Position column in Driver Standings)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
@@ -228,7 +228,12 @@
     <h2>Driver Standings</h2>
 <table id="driver-table">
 <thead>
-<tr><th>DRIVER</th><th>TEAM</th><th>TOTAL POINTS</th></tr>
+<tr>
+            <th>POS</th>
+            <th>DRIVER</th>
+            <th>TEAM</th>
+            <th>TOTAL POINTS</th>
+          </tr>
 </thead>
 <tbody></tbody>
 </table>
@@ -334,6 +339,7 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
         const name = entry.name;
         const team = driverTeamMap[name];
         const pts = entry.pts;
+        const pos = currRanks[name];
         const teamUpper = (team || "").toUpperCase();
         const diff = (prevRanks[name] || 0) - (currRanks[name] || 0);
         let arrow = "";
@@ -345,6 +351,7 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
         const tr = document.createElement("tr");
         tr.className = safeClass(teamUpper);
         tr.innerHTML = `
+          <td>${pos}</td>
           <td>${name}</td>
           <td>
             <img src="${teamCars[teamUpper]}" class="car" alt="${team}"/>
