--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -10,7 +10,7 @@
     body {
       margin:0; padding:20px;
       font-family:Arial,sans-serif;
-      background:url('ifwl_bg.webp')no-repeat center center fixed;
+      background:url('F1BG.webp')no-repeat center center fixed;
       background-size:cover;
     }
     h1,h2 { text-align:center; color:#000; margin:8px 0; }
