--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -13,7 +13,7 @@
       background:url('F1BG.webp')no-repeat center center fixed;
       background-size:cover;
     }
-    h1,h2 { text-align:center; color:#000; margin:8px 0; }
+    h1,h2 { text-align:center; color:#fff; margin:8px 0; }
     .version {
       position:fixed; top:10px; left:10px;
       background:rgba(255,255,255,0.7); padding:2px 6px;
@@ -23,7 +23,8 @@
       display:flex; align-items:center; justify-content:center;
       gap:20px; margin-bottom:10px;
     }
-    .header img { height:48px; }
+    .header img {height:48px;; background:#fff;
+}
     .join-series { text-align:center; margin:12px 0; }
     .join-series a {
       background:#1B1443; color:#fff; text-decoration:none;
@@ -93,9 +94,8 @@
     gap: 10px;
   }
 
-  .header img {
-    height: 32px;
-  }
+  .header img {height: 32px;; background:#fff;
+}
 
   h1 {
     font-size: 1.5em;
