--- a/ifwl_live_stewarding.html
+++ b/ifwl_live_stewarding.html
@@ -15,7 +15,6 @@
       const query = new google.visualization.Query(
         'https://docs.google.com/spreadsheets/d/15FEmqFgTX7uOai8Yc8gpZXAr97FjGksQfxNpYf_2gew/gviz/tq?sheet=Race%201'
       );
-      // Select columns: C (Replay Time), D (Cars), F (Ruling), H (Description), I (Resolved), J (Applied), K (Message)
       query.setQuery('SELECT C, D, F, H, I, J, K WHERE C IS NOT NULL');
       query.send(function(response) {
         if (response.isError()) {
@@ -43,7 +42,7 @@
       const query = new google.visualization.Query(
         'https://docs.google.com/spreadsheets/d/15FEmqFgTX7uOai8Yc8gpZXAr97FjGksQfxNpYf_2gew/gviz/tq?sheet=config'
       );
-      query.setQuery("SELECT B, C WHERE B IS NOT NULL LIMIT 7 OFFSET 2");
+      query.setQuery("SELECT B, C WHERE B IS NOT NULL LIMIT 7 OFFSET 1");
       query.send(function(response) {
         if (response.isError()) {
           document.getElementById('stewards_div').innerHTML = 'Error fetching steward data.';
@@ -71,8 +70,12 @@
 </head>
 <body class="bg-gray-900 text-white min-h-screen p-6">
   <div class="max-w-6xl mx-auto">
-    <div class="flex flex-col items-center mb-6">
-      <img src="ifwl_logo.png" alt="IFWL Logo" class="h-20 mb-2">
+    <div class="flex items-center justify-between mb-4">
+      <span class="text-sm text-gray-400 font-mono">Beta 0.0.3</span>
+      <img src="ifwl_logo.webp" alt="IFWL Logo" class="h-16 mx-auto">
+      <span></span>
+    </div>
+    <div class="text-center mb-6">
       <h1 class="text-3xl font-bold">IFWL Stewarding Panel - Live Updates</h1>
       <p class="text-sm text-gray-400 mt-1">Auto-refreshes every 20 seconds</p>
     </div>
