--- a/ifwl_live_stewarding.html
+++ b/ifwl_live_stewarding.html
@@ -72,7 +72,7 @@
   <div class="max-w-6xl mx-auto">
     <div class="flex items-center justify-between mb-4">
       <span class="text-sm text-gray-400 font-mono">Beta 0.0.3</span>
-      <img src="ifwl_logo.webp" alt="IFWL Logo" class="h-16 mx-auto">
+      <img src="ifwl_logo.png" alt="IFWL Logo" class="h-16 mx-auto">
       <span></span>
     </div>
     <div class="text-center mb-6">
