--- a/tickets.html
+++ b/tickets.html
@@ -15,7 +15,7 @@
       <a href="new-ticket.html" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">NEW TICKET</a>
     </div>
     <div class="bg-blue-100 text-blue-900 p-3 rounded mt-4">
-      <strong>ℹ️ Currently only ticket backlog is supported.</strong>
+      <strong>ℹ️ This system is still under development.</strong>
     </div>
   </div>
 
@@ -43,7 +43,7 @@
           </tr>
         </thead>
         <tbody id="ticketTable">
-          <tr><td colspan="8" class="px-4 py-6 text-center text-gray-500">No data available</td></tr>
+          <tr><td colspan="8" class="px-4 py-6 text-center text-gray-500">Loading tickets...</td></tr>
         </tbody>
       </table>
       <div class="p-4 text-right">
@@ -51,6 +51,44 @@
       </div>
     </div>
   </div>
+
+  <script>
+    const endpoint = "https://script.google.com/macros/s/AKfycbwNVyQ8eWEjUy2IRajsNwRN0y7Dt2e4GFRKVWxWcgeFXQD2wNXJXPRVdmOuXfFOpGVx/exec";
+
+    async function loadTickets() {
+      try {
+        const res = await fetch(endpoint);
+        const tickets = await res.json();
+        const tbody = document.getElementById("ticketTable");
+        tbody.innerHTML = "";
+
+        if (tickets.length === 0) {
+          tbody.innerHTML = '<tr><td colspan="8" class="px-4 py-6 text-center text-gray-500">No tickets available</td></tr>';
+          return;
+        }
+
+        tickets.forEach((t, i) => {
+          const row = `
+            <tr class="border-t">
+              <td class="px-4 py-2">#${i + 1}</td>
+              <td class="px-4 py-2">${new Date(t["Timestamp"]).toLocaleString()}</td>
+              <td class="px-4 py-2">${t["Reporter"]}</td>
+              <td class="px-4 py-2">${t["Event"]}</td>
+              <td class="px-4 py-2">${t["Track"]}</td>
+              <td class="px-4 py-2">${t["Reason"]}</td>
+              <td class="px-4 py-2 text-center">🕓</td>
+              <td class="px-4 py-2">${t["Steward"] || "-"}</td>
+            </tr>`;
+          tbody.innerHTML += row;
+        });
+      } catch (err) {
+        console.error("Error loading tickets:", err);
+        document.getElementById("ticketTable").innerHTML = '<tr><td colspan="8" class="px-4 py-6 text-center text-red-500">Error loading tickets</td></tr>';
+      }
+    }
+
+    window.onload = loadTickets;
+  </script>
 
 </body>
 </html>
