--- a/new-ticket.html
+++ b/new-ticket.html
@@ -40,7 +40,7 @@
       const payload = Object.fromEntries(data.entries());
 
       try {
-        await fetch('YOUR_APPS_SCRIPT_WEB_APP_URL', {
+        await fetch('https://script.google.com/macros/s/AKfycbyjKTMD0VXkj98w2RlM6ko5hni_gaqqLejWCEt7jD-30L61F-n7jodp_DbGR54X-zvL/exec', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(payload)
