--- a/tickets.html
+++ b/tickets.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Stewarding Tickets</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -12,7 +11,10 @@
   <div class="bg-white p-4 shadow-md">
     <div class="flex justify-between items-center">
       <h1 class="text-2xl font-bold">Tickets</h1>
-      <a href="new-ticket.html" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">NEW TICKET</a>
+      <a href="new-ticket.html"
+         class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">
+        NEW TICKET
+      </a>
     </div>
     <div class="bg-blue-100 text-blue-900 p-3 rounded mt-4">
       <strong>ℹ️ This system is still under development.</strong>
@@ -43,52 +45,61 @@
           </tr>
         </thead>
         <tbody id="ticketTable">
-          <tr><td colspan="8" class="px-4 py-6 text-center text-gray-500">Loading tickets...</td></tr>
+          <tr>
+            <td colspan="8" class="px-4 py-6 text-center text-gray-500">
+              Loading tickets…
+            </td>
+          </tr>
         </tbody>
       </table>
       <div class="p-4 text-right">
-        <button class="text-sm text-gray-600 hover:text-black" onclick="location.reload()">REFRESH</button>
+        <button class="text-sm text-gray-600 hover:text-black"
+                onclick="location.reload()">REFRESH</button>
       </div>
     </div>
   </div>
 
   <script>
-    const endpoint = "https://script.google.com/macros/s/AKfycbxTBPMaymJLcInvqfgHNNl2ae2fhyTdLUOdnYM-0r8n5u5la8kQEuoz7Vd_advfpCKE/exec";
+    // 1) This is the callback JSONP expects
+    function displayTickets(tickets) {
+      const tbody = document.getElementById("ticketTable");
+      tbody.innerHTML = "";
 
-    async function loadTickets() {
-      try {
-        const res = await fetch(endpoint);
-        const tickets = await res.json();
-        const tbody = document.getElementById("ticketTable");
-        tbody.innerHTML = "";
-
-        if (tickets.length === 0) {
-          tbody.innerHTML = '<tr><td colspan="8" class="px-4 py-6 text-center text-gray-500">No tickets available</td></tr>';
-          return;
-        }
-
-        tickets.forEach((t, i) => {
-          const row = `
-            <tr class="border-t">
-              <td class="px-4 py-2">#${i + 1}</td>
-              <td class="px-4 py-2">${new Date(t["Timestamp"]).toLocaleString()}</td>
-              <td class="px-4 py-2">${t["Reporter"]}</td>
-              <td class="px-4 py-2">${t["Event"]}</td>
-              <td class="px-4 py-2">${t["Track"]}</td>
-              <td class="px-4 py-2">${t["Reason"]}</td>
-              <td class="px-4 py-2 text-center">🕓</td>
-              <td class="px-4 py-2">${t["Steward"] || "-"}</td>
-            </tr>`;
-          tbody.innerHTML += row;
-        });
-      } catch (err) {
-        console.error("Error loading tickets:", err);
-        document.getElementById("ticketTable").innerHTML = '<tr><td colspan="8" class="px-4 py-6 text-center text-red-500">Error loading tickets</td></tr>';
+      if (!tickets || tickets.length === 0) {
+        tbody.innerHTML = `
+          <tr>
+            <td colspan="8"
+                class="px-4 py-6 text-center text-gray-500">
+              No tickets available
+            </td>
+          </tr>`;
+        return;
       }
+
+      tickets.forEach((t, i) => {
+        tbody.innerHTML += `
+          <tr class="border-t">
+            <td class="px-4 py-2">#${i+1}</td>
+            <td class="px-4 py-2">
+              ${new Date(t.Timestamp).toLocaleString()}
+            </td>
+            <td class="px-4 py-2">${t.Reporter}</td>
+            <td class="px-4 py-2">${t.Event}</td>
+            <td class="px-4 py-2">${t.Track}</td>
+            <td class="px-4 py-2">${t.Reason}</td>
+            <td class="px-4 py-2 text-center">🕓</td>
+            <td class="px-4 py-2">${t.Steward||"-"}</td>
+          </tr>`;
+      });
     }
 
-    window.onload = loadTickets;
+    // 2) Inject the JSONP script tag
+    window.onload = () => {
+      const s = document.createElement("script");
+      s.src = "https://script.google.com/macros/s/AKfycbxTBPMaymJLcInvqfgHNNl2ae2fhyTdLUOdnYM-0r8n5u5la8kQEuoz7Vd_advfpCKE/exec"
+            + "?callback=displayTickets";
+      document.body.appendChild(s);
+    };
   </script>
-
 </body>
 </html>
