--- a/tickets.html
+++ b/tickets.html
@@ -60,7 +60,7 @@
   </div>
 
   <script>
-    // 1) This is the callback JSONP expects
+    // JSONP callback — use the exact sheet header names
     function displayTickets(tickets) {
       const tbody = document.getElementById("ticketTable");
       tbody.innerHTML = "";
@@ -68,8 +68,7 @@
       if (!tickets || tickets.length === 0) {
         tbody.innerHTML = `
           <tr>
-            <td colspan="8"
-                class="px-4 py-6 text-center text-gray-500">
+            <td colspan="8" class="px-4 py-6 text-center text-gray-500">
               No tickets available
             </td>
           </tr>`;
@@ -80,9 +79,7 @@
         tbody.innerHTML += `
           <tr class="border-t">
             <td class="px-4 py-2">#${i+1}</td>
-            <td class="px-4 py-2">
-              ${new Date(t.Timestamp).toLocaleString()}
-            </td>
+            <td class="px-4 py-2">${new Date(t.Timestamp).toLocaleString()}</td>
             <td class="px-4 py-2">${t.Reporter}</td>
             <td class="px-4 py-2">${t.Event}</td>
             <td class="px-4 py-2">${t.Track}</td>
@@ -93,12 +90,13 @@
       });
     }
 
-    // 2) Inject the JSONP script tag
+    // Inject the JSONP script tag (no CORS issues)
     window.onload = () => {
-      const s = document.createElement("script");
-      s.src = "https://script.google.com/macros/s/AKfycbxTBPMaymJLcInvqfgHNNl2ae2fhyTdLUOdnYM-0r8n5u5la8kQEuoz7Vd_advfpCKE/exec"
-            + "?callback=displayTickets";
-      document.body.appendChild(s);
+      const script = document.createElement("script");
+      script.src = 
+        "https://script.google.com/macros/s/AKfycbxTBPMaymJLcInvqfgHNNl2ae2fhyTdLUOdnYM-0r8n5u5la8kQEuoz7Vd_advfpCKE/exec"
+        + "?callback=displayTickets";
+      document.body.appendChild(script);
     };
   </script>
 </body>
