--- a/new-ticket.html
+++ b/new-ticket.html
@@ -7,43 +7,43 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 p-6 font-sans">
+
+  <!-- Hidden iframe to receive the form POST response -->
+  <iframe name="hidden_iframe" style="display:none" onload="iframeLoaded()"></iframe>
+
   <div class="max-w-3xl mx-auto bg-white p-6 shadow rounded">
     <h1 class="text-2xl font-bold mb-6">New Ticket</h1>
-    <form id="ticketForm" class="space-y-4">
+    <!-- Notice: action=YOUR_SCRIPT_URL, method=post, target=hidden_iframe -->
+    <form id="ticketForm" 
+          action="https://script.google.com/macros/s/AKfycbxTBPMaymJLcInvqfgHNNl2ae2fhyTdLUOdnYM-0r8n5u5la8kQEuoz7Vd_advfpCKE/exec" 
+          method="post" 
+          target="hidden_iframe"
+          class="space-y-4">
+
       <div class="grid grid-cols-2 gap-4">
-        <input class="border p-2 rounded"
-               placeholder="Competition" name="competition" required/>
-        <input class="border p-2 rounded"
-               placeholder="Season" name="season" required/>
-        <input class="border p-2 rounded"
-               placeholder="Event (e.g. Jan 23, 2025 – 18:30)"
-               name="event" required/>
-        <input class="border p-2 rounded"
-               placeholder="Track" name="track" required/>
-        <input class="border p-2 rounded"
-               placeholder="Race" name="race"/>
-        <input class="border p-2 rounded"
-               placeholder="Reporter" name="reporter" required/>
-        <input class="border p-2 rounded"
-               placeholder="Accused" name="accused" required/>
-        <input class="border p-2 rounded"
-               placeholder="Steward" name="steward"/>
-        <input class="border p-2 rounded"
-               placeholder="Reason" name="reason" required/>
-        <input class="border p-2 rounded"
-               placeholder="Timestamp (e.g. 12:34)" name="timestamp"/>
+        <input class="border p-2 rounded" placeholder="Competition"    name="competition" required />
+        <input class="border p-2 rounded" placeholder="Season"         name="season"      required />
+        <input class="border p-2 rounded" placeholder="Event (e.g., Jan 23, 2025 – 18:30)" name="event" required />
+        <input class="border p-2 rounded" placeholder="Track"          name="track"       required />
+        <input class="border p-2 rounded" placeholder="Race"           name="race" />
+        <input class="border p-2 rounded" placeholder="Reporter"       name="reporter"    required />
+        <input class="border p-2 rounded" placeholder="Accused"        name="accused"     required />
+        <input class="border p-2 rounded" placeholder="Steward"        name="steward" />
+        <input class="border p-2 rounded" placeholder="Reason"         name="reason"      required />
+        <input class="border p-2 rounded" placeholder="Timestamp (e.g., 12:34)" name="timestamp" />
       </div>
+
       <textarea class="w-full border p-2 rounded" rows="4"
                 placeholder="Content / Description"
                 name="content"></textarea>
+
       <input class="w-full border p-2 rounded"
              placeholder="Visual Proof URL (YouTube, etc.)"
              name="proofUrl"/>
+
       <div class="flex justify-end gap-4">
         <a href="tickets.html"
-           class="px-4 py-2 border rounded hover:bg-gray-100">
-          CANCEL
-        </a>
+           class="px-4 py-2 border rounded hover:bg-gray-100">CANCEL</a>
         <button type="submit"
                 class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">
           SAVE
@@ -53,27 +53,21 @@
   </div>
 
   <script>
-    document.getElementById("ticketForm")
-      .addEventListener("submit", async e => {
-        e.preventDefault();
-        const data = Object.fromEntries(new FormData(e.target).entries());
+    // We'll set a flag when the form is submitted,
+    // then when the iframe loads its response, we'll alert + redirect.
+    let justSubmitted = false;
 
-        try {
-          await fetch(
-            "https://script.google.com/macros/s/AKfycbxTBPMaymJLcInvqfgHNNl2ae2fhyTdLUOdnYM-0r8n5u5la8kQEuoz7Vd_advfpCKE/exec",
-            {
-              method: "POST",
-              headers: { "Content-Type": "application/json" },
-              body: JSON.stringify(data)
-            }
-          );
-          alert("Ticket submitted!");
-          window.location.href = "tickets.html";
-        } catch (err) {
-          console.error(err);
-          alert("Error submitting ticket.");
-        }
+    document.getElementById("ticketForm")
+      .addEventListener("submit", () => {
+        justSubmitted = true;
       });
+
+    function iframeLoaded() {
+      if (!justSubmitted) return;
+      justSubmitted = false;
+      alert("Ticket submitted!");
+      window.location.href = "tickets.html";
+    }
   </script>
 </body>
 </html>
