--- a/new-ticket.html
+++ b/new-ticket.html
@@ -7,16 +7,29 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 p-6 font-sans">
+  <!-- 1) Define the iframeLoaded() callback before the iframe fires -->
+  <script>
+    // Will be called when the hidden iframe finishes loading the POST response
+    function iframeLoaded() {
+      if (!window.justSubmitted) return;   // ignore initial load
+      window.justSubmitted = false;
+      alert("Ticket submitted!");
+      window.location.href = "tickets.html";
+    }
+  </script>
 
-  <!-- Hidden iframe to receive the form POST response -->
-  <iframe name="hidden_iframe" style="display:none" onload="iframeLoaded()"></iframe>
+  <!-- 2) Hidden iframe target for the form POST -->
+  <iframe name="hidden_iframe"
+          style="display:none"
+          onload="iframeLoaded()">
+  </iframe>
 
+  <!-- 3) Your submission form -->
   <div class="max-w-3xl mx-auto bg-white p-6 shadow rounded">
     <h1 class="text-2xl font-bold mb-6">New Ticket</h1>
-    <!-- Notice: action=YOUR_SCRIPT_URL, method=post, target=hidden_iframe -->
-    <form id="ticketForm" 
-          action="https://script.google.com/macros/s/AKfycbxTBPMaymJLcInvqfgHNNl2ae2fhyTdLUOdnYM-0r8n5u5la8kQEuoz7Vd_advfpCKE/exec" 
-          method="post" 
+    <form id="ticketForm"
+          action="https://script.google.com/macros/s/AKfycbxTBPMaymJLcInvqfgHNNl2ae2fhyTdLUOdnYM-0r8n5u5la8kQEuoz7Vd_advfpCKE/exec"
+          method="post"
           target="hidden_iframe"
           class="space-y-4">
 
@@ -43,7 +56,9 @@
 
       <div class="flex justify-end gap-4">
         <a href="tickets.html"
-           class="px-4 py-2 border rounded hover:bg-gray-100">CANCEL</a>
+           class="px-4 py-2 border rounded hover:bg-gray-100">
+          CANCEL
+        </a>
         <button type="submit"
                 class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">
           SAVE
@@ -52,22 +67,13 @@
     </form>
   </div>
 
+  <!-- 4) Track submissions so iframeLoaded knows when to fire -->
   <script>
-    // We'll set a flag when the form is submitted,
-    // then when the iframe loads its response, we'll alert + redirect.
-    let justSubmitted = false;
-
+    window.justSubmitted = false;
     document.getElementById("ticketForm")
       .addEventListener("submit", () => {
-        justSubmitted = true;
+        window.justSubmitted = true;
       });
-
-    function iframeLoaded() {
-      if (!justSubmitted) return;
-      justSubmitted = false;
-      alert("Ticket submitted!");
-      window.location.href = "tickets.html";
-    }
   </script>
 </body>
 </html>
