--- a/new-ticket.html
+++ b/new-ticket.html
@@ -5,26 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>New Ticket</title>
   <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-gray-100 p-6 font-sans">
-  <!-- 1) Define the iframeLoaded() callback before the iframe fires -->
+
+  <!-- 1) Define our iframeLoaded handler up front -->
   <script>
-    // Will be called when the hidden iframe finishes loading the POST response
+    // This will be called when the hidden iframe finishes loading
     function iframeLoaded() {
-      if (!window.justSubmitted) return;   // ignore initial load
+      if (!window.justSubmitted) return;
       window.justSubmitted = false;
       alert("Ticket submitted!");
       window.location.href = "tickets.html";
     }
-  </script>
 
-  <!-- 2) Hidden iframe target for the form POST -->
+    // Flag that tracks when a submission just occurred
+    window.justSubmitted = false;
+  </script>
+</head>
+
+<body class="bg-gray-100 p-6 font-sans">
+  <!-- 2) Hidden iframe target for our form POST -->
   <iframe name="hidden_iframe"
           style="display:none"
           onload="iframeLoaded()">
   </iframe>
 
-  <!-- 3) Your submission form -->
+  <!-- 3) The form itself -->
   <div class="max-w-3xl mx-auto bg-white p-6 shadow rounded">
     <h1 class="text-2xl font-bold mb-6">New Ticket</h1>
     <form id="ticketForm"
@@ -67,9 +71,8 @@
     </form>
   </div>
 
-  <!-- 4) Track submissions so iframeLoaded knows when to fire -->
+  <!-- 4) Mark justSubmitted when the form fires -->
   <script>
-    window.justSubmitted = false;
     document.getElementById("ticketForm")
       .addEventListener("submit", () => {
         window.justSubmitted = true;
