--- a/tickets.html
+++ b/tickets.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Stewarding Tickets</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 font-sans">
 
+<body class="bg-gray-100 font-sans">
   <div class="bg-white p-4 shadow-md">
     <div class="flex justify-between items-center">
       <h1 class="text-2xl font-bold">Tickets</h1>
@@ -53,15 +53,19 @@
         </tbody>
       </table>
       <div class="p-4 text-right">
-        <button class="text-sm text-gray-600 hover:text-black"
-                onclick="location.reload()">REFRESH</button>
+        <button class="text-sm text-gray-600 hover:text-black" onclick="location.reload()">REFRESH</button>
       </div>
     </div>
   </div>
 
   <script>
-    // JSONP callback — use the exact sheet header names
+    // 1) Your exact Web App URL:
+    const SHEET_URL = "https://script.google.com/macros/s/AKfycbxTBPMaymJLcInvqfgHNNl2ae2fhyTdLUOdnYM-0r8n5u5la8kQEuoz7Vd_advfpCKE/exec";
+    console.log("Loading tickets from:", SHEET_URL);
+
+    // 2) JSONP callback — must match callback param below
     function displayTickets(tickets) {
+      console.log("JSONP data received:", tickets);
       const tbody = document.getElementById("ticketTable");
       tbody.innerHTML = "";
 
@@ -85,19 +89,18 @@
             <td class="px-4 py-2">${t.Track}</td>
             <td class="px-4 py-2">${t.Reason}</td>
             <td class="px-4 py-2 text-center">🕓</td>
-            <td class="px-4 py-2">${t.Steward||"-"}</td>
+            <td class="px-4 py-2">${t.Steward || "-"}</td>
           </tr>`;
       });
     }
 
-    // Inject the JSONP script tag (no CORS issues)
-    window.onload = () => {
+    // 3) Inject JSONP script on DOMContentLoaded
+    window.addEventListener("DOMContentLoaded", () => {
       const script = document.createElement("script");
-      script.src = 
-        "https://script.google.com/macros/s/AKfycbxTBPMaymJLcInvqfgHNNl2ae2fhyTdLUOdnYM-0r8n5u5la8kQEuoz7Vd_advfpCKE/exec"
-        + "?callback=displayTickets";
+      script.src = `${SHEET_URL}?callback=displayTickets`;
+      script.onerror = () => console.error("Failed to load JSONP script:", script.src);
       document.body.appendChild(script);
-    };
+    });
   </script>
 </body>
 </html>
