--- a/tickets.html
+++ b/tickets.html
@@ -6,13 +6,12 @@
   <title>Stewarding Tickets</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-
 <body class="bg-gray-100 font-sans">
+
   <div class="bg-white p-4 shadow-md">
     <div class="flex justify-between items-center">
       <h1 class="text-2xl font-bold">Tickets</h1>
-      <a href="new-ticket.html"
-         class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">
+      <a href="new-ticket.html" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">
         NEW TICKET
       </a>
     </div>
@@ -53,19 +52,20 @@
         </tbody>
       </table>
       <div class="p-4 text-right">
-        <button class="text-sm text-gray-600 hover:text-black" onclick="location.reload()">REFRESH</button>
+        <button class="text-sm text-gray-600 hover:text-black" onclick="location.reload()">
+          REFRESH
+        </button>
       </div>
     </div>
   </div>
 
   <script>
-    // 1) Your exact Web App URL:
-    const SHEET_URL = "https://script.google.com/macros/s/AKfycbxTBPMaymJLcInvqfgHNNl2ae2fhyTdLUOdnYM-0r8n5u5la8kQEuoz7Vd_advfpCKE/exec";
+    const SHEET_URL = "https://script.google.com/macros/s/AKfycbxS5MpcZ72QMuNHQ-BhwD9Z5GE4gNpHT8UYdntk-Sa_51rnp83o3U8tbEVRCnqIhi89/exec";
     console.log("Loading tickets from:", SHEET_URL);
 
-    // 2) JSONP callback — must match callback param below
+    // JSONP callback
     function displayTickets(tickets) {
-      console.log("JSONP data received:", tickets);
+      console.log("JSONP data:", tickets);
       const tbody = document.getElementById("ticketTable");
       tbody.innerHTML = "";
 
@@ -89,17 +89,17 @@
             <td class="px-4 py-2">${t.Track}</td>
             <td class="px-4 py-2">${t.Reason}</td>
             <td class="px-4 py-2 text-center">🕓</td>
-            <td class="px-4 py-2">${t.Steward || "-"}</td>
+            <td class="px-4 py-2">${t.Steward||"-"}</td>
           </tr>`;
       });
     }
 
-    // 3) Inject JSONP script on DOMContentLoaded
+    // Inject JSONP script
     window.addEventListener("DOMContentLoaded", () => {
-      const script = document.createElement("script");
-      script.src = `${SHEET_URL}?callback=displayTickets`;
-      script.onerror = () => console.error("Failed to load JSONP script:", script.src);
-      document.body.appendChild(script);
+      const s = document.createElement("script");
+      s.src = `${SHEET_URL}?callback=displayTickets`;
+      s.onerror = () => console.error("JSONP load failed:", s.src);
+      document.body.appendChild(s);
     });
   </script>
 </body>
